# dystopian_news

./: README.md
.github/workflows/: ci.yml
backend/: Dockerfile  crud.py  database.py  gemini.py  main.py  models.py  pyproject.toml  schemas.py  send_email.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
infra/: .gitignore  db_cluster.tf  k8s_cluster.tf  main.tf  outputs.tf
infra/k8s/: clusterissuer.yaml  kustomization.yaml  namespace.yaml
infra/k8s/applications/: dystopian-news.yaml
infra/k8s/backend/: deployment.yaml  ingress.yaml  service.yaml
infra/k8s/frontend/: deployment.yaml  ingress.yaml  service.yaml
